syntax = "proto3";

package tempopb;

import "opentelemetry/proto/trace/v1/trace.proto";
import "opentelemetry/proto/common/v1/common.proto";

message TraceByIDResponse {
    Trace trace = 1;
    TraceByIDMetrics metrics = 2;
  }
  
message TraceByIDMetrics {}

message Trace {
    repeated opentelemetry.proto.trace.v1.ResourceSpans batches = 1;
}

message SearchRequest {
  map<string, string> Tags = 1;
  uint32 MinDurationMs = 2;
  uint32 MaxDurationMs = 3;
  uint32 Limit = 4;
  uint32 start = 5;
  uint32 end = 6;
  string Query = 8;
}
message SearchResponse {
  repeated TraceSearchMetadata traces = 1;
  SearchMetrics metrics = 2;
}
message TraceSearchMetadata {
  string traceID = 1;
  string rootServiceName = 2;
  string rootTraceName = 3;
  uint64 startTimeUnixNano = 4;
  uint32 durationMs = 5;
  SpanSet spanSet = 6; // deprecated. use SpanSets field below
  repeated SpanSet spanSets = 7;
}
message SpanSet {
  repeated Span spans = 1;
  uint32 matched = 2;
}
message Span {
  string spanID = 1;
  string name = 2;
  uint64 startTimeUnixNano = 3;
  uint64 durationNanos = 4;
  repeated opentelemetry.proto.common.v1.KeyValue attributes = 5;
}
message SearchMetrics {
  uint32 inspectedTraces = 1;
  uint64 inspectedBytes = 2;
  uint32 totalBlocks = 3;
  uint32 completedJobs = 4;
  uint32 totalJobs = 5;
  uint64 totalBlockBytes = 6;
}